--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@hookform/resolvers": "^1.3.7",
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
+    "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -16,6 +17,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^6.15.6",
+    "react-redux": "^8.1.2",
     "react-router-dom": "^5",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4",
