--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-redux": "^8.1.2",
     "react-router-dom": "^5",
     "react-scripts": "5.0.1",
+    "styled-components": "^6.0.7",
     "web-vitals": "^2.1.4",
     "yup": "^1.2.0"
   },
@@ -48,6 +49,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "node-sass": "^9.0.0"
   }
 }
